Materials and methods and project summary

--- a/Analysis_with_Liger/Project_summary/custom.css
+++ b/Analysis_with_Liger/Project_summary/custom.css
@@ -22,3 +22,8 @@
   padding-left: 20px;
   font-size: 8px; /* Adjust the font size for deeper nested TOC levels */
 }
+
+ul {
+  list-style-type: none;
+  padding-left: 1em;
+}
